# remote-bridge

./: .gitignore  Cargo.toml  README.md  mock_ai_response.md  package.json  remotebridge.yaml  server.json  smithery.yaml
scripts/: install.js
skills/remote-bridge/: SKILL.md
skills/remote-bridge/agents/: openai.yaml
src/: config.rs  executor.rs  insights.rs  lib.rs  main.rs  main.rs_apply_fix  mcp.rs  parser.rs  transport.rs  watcher.rs
