[package]
name = "remote-bridge"
version = "0.1.8"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.32", features = ["full"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
ssh2 = "0.9"
tempfile = "3.8"
which = "6.0"
filetime = "0.2"
dirs-next = "2.0"
